test-suite/invalid/source-missing-title.glx
# Invalid source entity - missing title
# Expected error: Required field 'title' is missing
id: source-12345678
version: "1.0"
source_type: vital_record

